tests/snapshots/integration__integration_tests__config_state__ci_status_get_json_with_cached_data.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "status": "passed",
  "source": "pr",
  "stale": false
}
