tests/snapshots/integration__integration_tests__config_state__logs_get_json_with_files.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "command_log": [
    {
      "file": "commands.jsonl",
      "modified_at": "<TIMESTAMP>",
      "size": "<SIZE>"
    }
  ],
  "hook_output": [
    {
      "file": "main-user-post-start-server.log",
      "modified_at": "<TIMESTAMP>",
      "size": "<SIZE>"
    }
  ]
}
