tests/snapshots/integration__integration_tests__config_state__state_disposal_locations.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[36mDEFAULT BRANCH[39m
[107m [0m (none)

[36mPREVIOUS BRANCH[39m
[107m [0m (none)

[36mBRANCH MARKERS[39m
[107m [0m (none)

[36mVARS[39m
[107m [0m (none)

[36mCI STATUS CACHE[39m
[107m [0m (none)

[36mSUMMARY CACHE[39m
[107m [0m (none)

[36mGIT COMMANDS CACHE[39m
[107m [0m (none)

[36mHINTS[39m
[107m [0m (none)

[36mCOMMAND LOG[39m @ <PATH>
[107m [0m (none)

[36mHOOK OUTPUT[39m @ <PATH>
[107m [0m (none)

[36mDIAGNOSTIC[39m @ <PATH>
[107m [0m (none)

[36mTRASH[39m
                         Path                           Age   
 ───────────────────────────────────────────────────── ────── 
 _REPO_/.git/worktrunk-unregistered-control-1234567890 future 
 _REPO_/.git/wt/trash/zz-stray-file.txt                future
