tests/snapshots/integration__integration_tests__config_state__state_get_comprehensive.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[36mDEFAULT BRANCH[39m
[107m [0m main

[36mPREVIOUS BRANCH[39m
[107m [0m feature

[36mBRANCH MARKERS[39m
 Branch     Marker    Age 
 ─────── ──────────── ─── 
 bugfix  🐛 debugging now 
 feature 🚧 WIP       now

[36mVARS[39m
 Branch  Key   Value  
 ─────── ──── ─────── 
 feature port 3000    
 main    env  staging

[36mCI STATUS CACHE[39m
 Branch  Status Age  Head   
 ─────── ────── ─── ─────── 
 feature passed now abc1234

[36mSUMMARY CACHE[39m
 Branch               Summary               Age 
 ─────── ────────────────────────────────── ─── 
 feature Add constant-time token validation now

[36mGIT COMMANDS CACHE[39m
[107m [0m 2 entries

[36mHINTS[39m
[107m [0m (none)

[36mCOMMAND LOG[39m @ <PATH>
[107m [0m (none)

[36mHOOK OUTPUT[39m @ <PATH>
              File               Size  Age   
 ─────────────────────────────── ──── ────── 
 bugfix/internal/remove.log      13B  future 
 feature/user/post-start/npm.log 10B  future

[36mDIAGNOSTIC[39m @ <PATH>
[107m [0m (none)

[36mTRASH[39m
                       Path                         Age   
 ───────────────────────────────────────────────── ────── 
 _REPO_/.git/wt/trash/myproject.bugfix-9999999999  future 
 _REPO_/.git/wt/trash/myproject.feature-1234567890 future
