tests/snapshots/integration__integration_tests__config_state__state_get_with_ci_entries.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[36mDEFAULT BRANCH[39m
[107m [0m (none)

[36mPREVIOUS BRANCH[39m
[107m [0m (none)

[36mBRANCH MARKERS[39m
[107m [0m (none)

[36mVARS[39m
[107m [0m (none)

[36mCI STATUS CACHE[39m
 Branch  Status Age  Head   
 ─────── ────── ─── ─────── 
 bugfix  failed now 1112223 
 feature passed now abc1234 
 main    none   now deadbee

[36mSUMMARY CACHE[39m
[107m [0m (none)

[36mGIT COMMANDS CACHE[39m
[107m [0m (none)

[36mHINTS[39m
[107m [0m (none)

[36mCOMMAND LOG[39m @ <PATH>
[107m [0m (none)

[36mHOOK OUTPUT[39m @ <PATH>
[107m [0m (none)

[36mDIAGNOSTIC[39m @ <PATH>
[107m [0m (none)

[36mTRASH[39m
[107m [0m (none)
