tests/snapshots/integration__integration_tests__config_state__state_logs_get_hook_not_found.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
[31m✗[39m [31mNo log file matches [1muser:post-start:server[22m for branch [1mmain[22m[39m
[107m [0m Expected: main/user/post-start/server.log
[107m [0m Available: main/user/post-start/other.log
